--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
+serde = { version = "^1.0", features = ["derive"] }
 temp_testdir = "^0.2"
 tokio-test = "^0.2"
 
